# simple-conf

./: .gitignore  README.md  pyproject.toml
examples/: b.toml  basic_usage.py  complex_struct.py  multiple_formats.py  validation_demo.py
simpleconf/: __init__.py  base.py  config.py
