[tool.poetry]
name = "simple-conf"
version = "0.1.0"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.20.2"
marshmallow-dataclass = {extras = ["enum", "union"], version = "^8.6.0"}
toml = "^0.10.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
